feat: creation dinamic validations

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,5 +1,3 @@
-
-
 .registerDesign {
 
     height: 84vh;
@@ -11,4 +9,30 @@
     align-items: center;
 
     background-color: green;
+}
+
+.errorMsg {
+    color: red;
+}
+
+.buttonSubmit {
+
+    height: 3em;
+    width: 8em;
+
+    border-radius: 1em;
+    background-color: crimson;
+    color: white;
+    font-weight: bolder;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonSubmit:hover {
+
+    transition: 0.4s;
+    background-color: lightcoral;
+    cursor: pointer;
 }
