--- a/src/common/Custominput/Custominput.css
+++ b/src/common/Custominput/Custominput.css
@@ -1,4 +1,3 @@
-
 .inputDesign {
 
     height: 2em;
@@ -10,3 +9,8 @@
     margin-bottom: 4em;
 }
 
+.inputDesignError {
+
+    border: 0.2em red solid;
+
+}
