feat: styles to login and register

--- a/src/common/Custominput/Custominput.css
+++ b/src/common/Custominput/Custominput.css
@@ -1,12 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap');
+
 .inputDesign {
+    height: 4em;
+    width: 25em;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: white;
 
-    height: 2em;
-    width: 15em;
+    border-radius: 0.5em;
+    border: 1 solid yellow;
 
-    border-radius: 1em;
-    border: 0.5 solid darkcyan;
+    margin-bottom: 1.5em;
+    background-color: #f47e8e;
+    opacity: 70%;
+}
 
-    margin-bottom: 4em;
+input::placeholder {
+    text-align: center;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: 1.5em;
+    opacity: 1;
+    color: white;
+}
+
+.labelLogin {
+    font-family: agbalumo;
+    font-size: 3em;
+    font: bold;
+    color: #ff69b4;
+    text-shadow: rgba(0,0,0,1) 0px -3px 36px;
+}
+
+.labelRegister {
+    font-family: agbalumo;
+    font-size: 3em;
+    font: bold;
+    color: #ff69b4;
+    text-shadow: rgba(0,0,0,1) 0px -3px 36px;
 }
 
 .inputDesignError {
@@ -14,3 +46,4 @@
     border: 0.2em red solid;
 
 }
+
