--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,5 @@
 .homeDesign {
-
-    height: 84vh;
+    height: 95vh;
     width: 100vw;
 
     display: flex;
@@ -9,4 +8,8 @@
     align-items: center;
 
     background-color: beige;
+}
+
+.avatarCharacter {
+    height: 8em;
 }
