--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,6 +1,6 @@
 .registerDesign {
 
-    height: 84vh;
+    height: 95vh;
     width: 100vw;
 
     display: flex;
@@ -8,7 +8,8 @@
     justify-content: center;
     align-items: center;
 
-    background-color: green;
+    background-image: url(../../img/register.jpg);
+    background-size: cover;
 }
 
 .errorMsg {
@@ -16,23 +17,97 @@
 }
 
 .buttonSubmit {
-
     height: 3em;
     width: 8em;
+    font-size: 1.5em;
 
     border-radius: 1em;
-    background-color: crimson;
+    background-color: #5086c1;
     color: white;
     font-weight: bolder;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    
 }
+
+@-webkit-keyframes buttonSubmit {
+    from {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: center center;
+              transform-origin: center center;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    10% {
+      -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    17% {
+      -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    33% {
+      -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    45% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes buttonSubmit {
+    from {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-transform-origin: center center;
+              transform-origin: center center;
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    10% {
+      -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    17% {
+      -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    33% {
+      -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    45% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  
 
 .buttonSubmit:hover {
 
     transition: 0.4s;
-    background-color: lightcoral;
+    background-color: #f47e8e;
     cursor: pointer;
+    -webkit-animation: buttonSubmit 1.5s ease-in-out infinite both;
+	        animation: buttonSubmit 1.5s ease-in-out infinite both;
 }
