--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,15 +1,77 @@
-.homeDesign {
-    height: 95vh;
-    width: 100vw;
+/* .homeDesign {
+  height: 100vh;
+  width: 100vw;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    background-color: beige;
+  background-color: beige;
+  overflow-y: auto;
+  object-fit: cover;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-image: url(../../img/home.jpg);
+  overflow-x: hidden;
+  position: relative;
+} */
+
+/* .bg-home {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  object-fit: cover;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 150%;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+} */
+
+/* .logo {
+  width: 50em;
+  height: 15em;
+  background-image: url(../../img//rocket_tattoo_logo-removebg-preview.png);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 0;
+} */
+
+.home-text {
+  height: 8em;
+  width: 100%;
+  background-color: #f47e8e;
+  font-family: agbalumo;
+  font-size: 1.8em;
+  font-weight: bold;
+  color: #5086c1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  overflow: hidden; 
 }
 
+/* .background-banner {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 120%;
+    background-repeat: no-repeat;
+  } */
+
 .avatarCharacter {
-    height: 8em;
+  height: 8em;
 }
