--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -11,6 +11,18 @@
     background-size: cover;
 }
 
+.form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 0.5em solid #5086c1;
+        padding: 0.5em;
+        -webkit-box-shadow:0px 10px 24px 29px rgba(5,5,5,1);
+        -moz-box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
+        box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
+}
+
 .buttonLogin {
     height: 3em;
     width: 8em;
@@ -24,6 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 0.5em;
     
     
 }
