--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,5 +1,4 @@
 .registerDesign {
-
     height: 95vh;
     width: 100vw;
 
@@ -12,13 +11,25 @@
     background-size: cover;
 }
 
+.form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 0.5em solid #5086c1;
+        padding: 0.5em;
+        -webkit-box-shadow:0px 10px 24px 29px rgba(5,5,5,1);
+        -moz-box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
+        box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
+}
+
 .errorMsg {
     color: red;
 }
 
 .buttonSubmit {
-    height: 3em;
-    width: 8em;
+    height: 2.5em;
+    width: 6em;
     font-size: 1.5em;
 
     border-radius: 1em;
@@ -29,8 +40,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
+    margin-top: 0.5em;
 }
 
 @-webkit-keyframes buttonSubmit {
@@ -67,6 +77,7 @@
               animation-timing-function: ease-out;
     }
   }
+
   @keyframes buttonSubmit {
     from {
       -webkit-transform: scale(1);
@@ -104,10 +115,9 @@
   
 
 .buttonSubmit:hover {
-
     transition: 0.4s;
     background-color: #f47e8e;
     cursor: pointer;
     -webkit-animation: buttonSubmit 1.5s ease-in-out infinite both;
-	        animation: buttonSubmit 1.5s ease-in-out infinite both;
+        animation: buttonSubmit 1.5s ease-in-out infinite both;
 }
