feat: created about page

--- a/src/common/BannerHome/BannerHome.css
+++ b/src/common/BannerHome/BannerHome.css
@@ -15,11 +15,15 @@
     align-items: center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
   }
 
   .logoPage{
     width: 120%;
     height: 120%;
+    filter: drop-shadow(0 1px 1px gold);
+    overflow: hidden;
+    margin-right: 8em;
   }
 
   @media screen and (max-width: 768px) {
