--- a/src/common/AboutUs/AboutUs.css
+++ b/src/common/AboutUs/AboutUs.css
@@ -3,7 +3,7 @@
 .aboutUsDesign {
     height: 37em;
     width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: black;
 }
 
@@ -14,13 +14,14 @@
     max-width: 100vw;
     height: 30em;
     margin-top: 7em;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .aboutUsLogo {
     height: 30em;
     width: 35em;
-    overflow-x: hidden
+    overflow: hidden;
+    filter: drop-shadow(0 1px 1px yellow);
 }
 
 .textAboutUs {
@@ -29,7 +30,7 @@
     margin-left: 0.625em;
     font-family: 'Agbalumo', cursive;
     width: 30em;
-    overflow-x: hidden
+    overflow: hidden
 }
 
 .colourText {
@@ -41,7 +42,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 1em;
-    overflow-x: hidden
+    overflow: hidden
 }
 
 .appointmentAboutUs {
@@ -53,7 +54,7 @@
     align-items: center;
     background-color: transparent;
     font-size: 20px;
-    overflow-x: hidden
+    overflow: hidden;
 }
 
 .appointmentAboutUs:hover {
@@ -61,6 +62,7 @@
     color: gold;
     background-color: white;
     scale: 1.02;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
