--- a/src/common/TattooStyles/TattooStyles.css
+++ b/src/common/TattooStyles/TattooStyles.css
@@ -35,39 +35,25 @@
 .image-container {
     display: flex;
     justify-content: space-around;
+    
     padding: 10em;
-}
-
-.image-tattoo {
-    max-width: 25%;
+  }
+  
+  .image-wrapper {
+    position: relative;
+    width: 25%;
+    cursor: pointer;
+  }
+  
+  .image-tattoo {
+    max-width: 100%;
     height: auto;
-    border: solid 2px gold;      
+    border: solid 2px gold;
+    transition: 0.4s;
+    transform-style: preserve-3d;
   }
-
-.image-tattoo:hover {
-    scale: 1.1;
-    transition: 0.2s;
-    -webkit-animation: image-tattoo 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
-        animation: image-tattoo 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+  
+  .tattooStyles .background-banner .image-container .image-wrapper.flipped .image-tattoo {
+    transform: rotateY(180deg);
   }
-
-@-webkit-keyframes image-tattoo {
-    0% {
-      -webkit-transform: rotateY(0);
-              transform: rotateY(0);
-    }
-    100% {
-      -webkit-transform: rotateY(180deg);
-              transform: rotateY(180deg);
-    }
-  }
-@keyframes image-tattoo {
-    0% {
-      -webkit-transform: rotateY(0);
-              transform: rotateY(0);
-    }
-    100% {
-      -webkit-transform: rotateY(180deg);
-              transform: rotateY(180deg);
-    }
-  }
+  
