feat: cleaning code

--- a/src/common/TattooStyles/TattooStyles.css
+++ b/src/common/TattooStyles/TattooStyles.css
@@ -1,59 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap");
 
 .tattooStyles {
-    width: 100vw;
-    height: 40em;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Abgalumo', cursive;
-    background-image: url('../../img/home-example.jpg');
-    object-fit: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
+  width: 100vw;
+  height: 40em;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Abgalumo", cursive;
+  background-image: url("../../img/home-example.jpg");
+  object-fit: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 .tattooInfo {
-    color: gold;
-    font-size: 5em;
-    margin-top: 1em;
-    overflow: hidden;
+  color: gold;
+  font-size: 5em;
+  margin-top: 1em;
+  overflow: hidden;
 }
 
 .stylesInfo {
-    color: white;
-    font-size: 20px;
-    width: 50%;
-    overflow: hidden;   
+  color: white;
+  font-size: 20px;
+  width: 50%;
+  overflow: hidden;
 }
 
 .stylesBanner {
-    filter: saturate(1.5);
+  filter: saturate(1.5);
 }
 
 .image-container {
-    display: flex;
-    justify-content: space-around;
-    
-    padding: 10em;
-  }
-  
-  .image-wrapper {
-    position: relative;
-    width: 25%;
-    cursor: pointer;
-  }
-  
+  display: flex;
+  justify-content: space-around;
+  padding: 10em;
+}
+
+.image-wrapper {
+  position: relative;
+  width: 25%;
+  cursor: pointer;
+}
+
+.image-tattoo {
+  max-width: 100%;
+  height: auto;
+  border: solid 2px gold;
+  transition: 0.4s;
+  transform-style: preserve-3d;
+}
+
+.tattooStyles
+  .background-banner
+  .image-container
+  .image-wrapper.flipped
   .image-tattoo {
-    max-width: 100%;
-    height: auto;
-    border: solid 2px gold;
-    transition: 0.4s;
-    transform-style: preserve-3d;
-  }
-  
-  .tattooStyles .background-banner .image-container .image-wrapper.flipped .image-tattoo {
-    transform: rotateY(180deg);
-  }
-  
+  transform: rotateY(180deg);
+}
