--- a/src/common/BannerHome/BannerHome.css
+++ b/src/common/BannerHome/BannerHome.css
@@ -23,7 +23,8 @@
     height: 120%;
     filter: drop-shadow(0 1px 1px gold);
     overflow: hidden;
-    margin-right: 8em;
+    margin-right: 10em;
+    /* color: ; */
   }
 
   @media screen and (max-width: 768px) {
