--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,123 +1,134 @@
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap");
+
 .registerDesign {
-    height: 95vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3em;
 
-    background-image: url(../../img/register.jpg);
-    background-size: cover;
+  background-image: url(../../img/register.jpg);
+  background-size: cover;
+  
 }
 
-.form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        border: 0.5em solid #5086c1;
-        padding: 0.5em;
-        -webkit-box-shadow:0px 10px 24px 29px rgba(5,5,5,1);
-        -moz-box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
-        box-shadow: 0px 10px 24px 29px rgba(5,5,5,1);
+.header {
+  font-family: "Agbalumo", cursive;
+  font-size: 2.5em;
+  color: gold;
 }
 
 .errorMsg {
-    color: red;
+  color: red;
+  border-radius: 0.5em;
+  border: 2px solid red;
+  padding: 2px;
+  background-color: white;
+  opacity: 70%;
+}
+
+.errorMsgVoid {
+  display: none;
+}
+
+.errorMsgVoid.errorMsg {
+  display: flex;
 }
 
 .buttonSubmit {
-    height: 2.5em;
-    width: 6em;
-    font-size: 1.5em;
+  height: 3em;
+  width: 8em;
+  font-size: 1.5em;
 
-    border-radius: 1em;
-    background-color: #5086c1;
-    color: white;
-    font-weight: bolder;
+  border-radius: 1em;
+  background-color: #5086c1;
+  color: white;
+  font-weight: bolder;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5em;
 }
 
 @-webkit-keyframes buttonSubmit {
-    from {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-transform-origin: center center;
-              transform-origin: center center;
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    10% {
-      -webkit-transform: scale(0.91);
-              transform: scale(0.91);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    17% {
-      -webkit-transform: scale(0.98);
-              transform: scale(0.98);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    33% {
-      -webkit-transform: scale(0.87);
-              transform: scale(0.87);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    45% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
 
-  @keyframes buttonSubmit {
-    from {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-transform-origin: center center;
-              transform-origin: center center;
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    10% {
-      -webkit-transform: scale(0.91);
-              transform: scale(0.91);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    17% {
-      -webkit-transform: scale(0.98);
-              transform: scale(0.98);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    33% {
-      -webkit-transform: scale(0.87);
-              transform: scale(0.87);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    45% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
+@keyframes buttonSubmit {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
-  
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
 
 .buttonSubmit:hover {
-    transition: 0.4s;
-    background-color: #f47e8e;
-    cursor: pointer;
-    -webkit-animation: buttonSubmit 1.5s ease-in-out infinite both;
-        animation: buttonSubmit 1.5s ease-in-out infinite both;
+  transition: 0.4s;
+  background-color: #f47e8e;
+  cursor: pointer;
+  -webkit-animation: buttonSubmit 1.5s ease-in-out infinite both;
+  animation: buttonSubmit 1.5s ease-in-out infinite both;
 }
