feat: view new appointment funtional

--- a/src/common/AppointmentTable/AppointmentTable.css
+++ b/src/common/AppointmentTable/AppointmentTable.css
@@ -1,1 +1,193 @@
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap");
 
+.printDesign {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3em;
+  background-image: url(../../img/tatuaje-flor_188544-54070.avif);
+  background-size: cover;
+  color: white;
+  font-family: "Agbalumo", cursive;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.tableContainer {
+  margin-top: 1em;
+}
+
+table {
+  width: 100% ;
+  border-collapse: collapse;
+  margin-top: 1em;
+}
+
+th,
+td {
+  border-bottom: 1px solid white;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: gold;
+  font-size: 1.5em;
+}
+
+td {
+  font-size: 1.2em;
+  background-color: black;
+  opacity: 80%;
+}
+
+.inputField {
+  width: 100%;
+  padding: 8px;
+  margin: 6px 0;
+  box-sizing: border-box;
+}
+
+.buttonActions button,
+.edit,
+.save,
+.delete {
+  height: 3em;
+  width: 8em;
+  font-size: 1.5em;
+  border-radius: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5em;
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
+
+.buttonActions button:hover,
+.edit:hover,
+.save:hover,
+.delete:hover {
+  background-color: #f47e8e;
+  animation: buttonSubmit 1.5s ease-in-out infinite both;
+}
+
+.buttonActions {
+  display: flex;
+  gap: 5px;
+}
+
+.buttonActions button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+  margin-top: 0.3em;
+  transition: background-color 0.4s;
+}
+
+.buttonActions button:hover {
+  background-color: #f47e8e;
+}
+
+.edit,
+.save,
+.delete {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+  margin-top: 0.3em;
+  background-color: #5086c1;
+  color: white;
+  padding: 8px 12px;
+  transition: background-color 0.4s;
+}
+
+.edit:hover,
+.save:hover,
+.delete:hover {
+  background-color: #4b75a3;
+}
+
+.delete {
+  background-color: #f44336;
+}
+
+.delete:hover {
+  background-color: #d32f2f;
+}
+
+@-webkit-keyframes buttonSubmit {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+
+@keyframes buttonSubmit {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
