--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@
 .read-the-docs {
   color: #888;
 }
+
+img{
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
