--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     --sb-track-color: #000;
     --sb-thumb-color: #ffd700;
     --sb-size: 10px;
@@ -20,4 +20,4 @@
     background: var(--sb-thumb-color);
     border-radius: 10px;
   }
-   */
+  
