--- a/src/common/SuperAdminTables/SuperAdminTables.css
+++ b/src/common/SuperAdminTables/SuperAdminTables.css
@@ -45,9 +45,26 @@ td {
   opacity: 80%;
 }
 
-.inputField {
-  width: 100%;
-  padding: 8px;
-  margin: 6px 0;
-  box-sizing: border-box;
+body {
+  --sb-track-color: #000;
+  --sb-thumb-color: #ffd700;
+  --sb-size: 10px;
+  background-color: black;
+
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 10px;
 }
