--- a/src/common/FlipCardData/FlipCardData.css
+++ b/src/common/FlipCardData/FlipCardData.css
@@ -1,69 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap");
 
 .flip-card {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-  
-  .flip-card img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .flip-card-inner {
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
-  }
-  
-  .flip-card.flipped .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front,
-  .flip-card-back {
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-family: "Agbalumo", cursive;
-  }
-  
-  .flip-card-front {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border-radius: 0.5em; 
-  }
-  
-  .flip-card-front img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-  
-  .flip-card-back {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: rotateY(180deg);
-    background-color: transparent;
-    padding: 10px;
-  }
-  
-  .flip-card-back div {
-    text-align: center;
-  }
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
 
-  h2{
-    color: gold;
-  }
+.flip-card img {
+  width: 100%;
+  height: auto;
+}
 
-  p {
-    color: white;
-  }
+.flip-card-inner {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.flip-card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: "Agbalumo", cursive;
+}
+
+.flip-card-front {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border-radius: 0.5em;
+}
+
+.flip-card-front img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.flip-card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotateY(180deg);
+  background-color: transparent;
+  padding: 10px;
+}
+
+.flip-card-back div {
+  text-align: center;
+}
+
+h2 {
+  color: gold;
+}
+
+p {
+  color: white;
+}
