--- a/src/common/ArtistsCard/ArtistsCard.css
+++ b/src/common/ArtistsCard/ArtistsCard.css
@@ -1,60 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto+Slab:wght@500&display=swap");
 
 .artists {
+  height: 35em;
+  width: 100vw;
 
-    height: 35em;
-    width: 100vw;
+  border-radius: 1em;
 
-    border-radius: 1em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-
-    background-color: transparent;
-    border: 0.2 solid black;
+  background-color: transparent;
+  border: 0.2 solid black;
 }
 
 .card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
 
-    height: 32em;
-    width: 15em;
-    margin-top: 4em;
-
+  height: 32em;
+  width: 15em;
+  margin-top: 4em;
 }
 
 .photo {
-    height: 20em;
-
+  height: 20em;
 }
 
 .text {
-    font-family: agbalumo;
+  font-family: agbalumo;
 }
 
 .name {
-    font-family: agbalumo;
+  font-family: agbalumo;
 }
 
 .characterCardDesign:hover {
-
-    transform: scale(1.2);
-    transition: 1s;
+  transform: scale(1.2);
+  transition: 1s;
 }
 
 .selectedCard {
-
-    background-color: red;
+  background-color: red;
 }
 
 .avatar {
-
-    height: 6em;
-    width: 6em;
+  height: 6em;
+  width: 6em;
 }
