--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,23 @@ img{
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+
+@media only screen and (max-width: 990px) {
+  html {
+    font-size: 0.7em;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  html {
+    font-size: 0.5em;
+  }
+
+}
+
+@media only screen and (max-width: 680px) {
+  html {
+    font-size: 0.33em;
+  }
+
+}
